# AdvCpp.2020

./: .gitignore  CMakeLists.txt  README.md  main.cpp
hw-1/: CMakeLists.txt  README.md
hw-1/examples/: echo.cpp  main.cpp
hw-1/include/: Descriptor.h  Exception.h  Process.h
hw-1/src/: Descriptor.cpp  Process.cpp  echo.cpp  main.cpp
hw-2/: CMakeLists.txt  README.md
hw-2/examples/: CMakeLists.txt  logging.cpp
hw-2/include/: BaseLogger.hpp  FileLogger.hpp  LogModifier.hpp  Logger.hpp  LoggerGlobalFunc.hpp  StderrLogger.hpp  StdoutLogger.hpp
hw-2/log/: CMakeLists.txt
hw-2/log/include/: BaseLogger.hpp  Exception.hpp  FileLogger.hpp  Level.hpp  LogModifier.hpp  Logger.hpp  LoggerGlobalFunc.hpp  StderrLogger.hpp  StdoutLogger.hpp
hw-2/log/src/: BaseLogger.cpp  Exception.cpp  FileLogger.cpp  LogModifier.cpp  Logger.cpp  LoggerGlobalFunc.cpp  StderrLogger.cpp  StdoutLogger.cpp
hw-2/src/: BaseLogger.cpp  FileLogger.cpp  LogModifier.cpp  Logger.cpp  LoggerGlobalFunc.cpp  StderrLogger.cpp  StdoutLogger.cpp
hw-3/: CMakeLists.txt  README.md
hw-3/examples/: CMakeLists.txt  client.cpp  server.cpp
hw-3/tcp/: CMakeLists.txt
hw-3/tcp/include/: Connection.hpp  Exception.hpp  Server.hpp  Socket.hpp
hw-3/tcp/src/: Connection.cpp  Exception.cpp  Server.cpp  Socket.cpp
hw-4/: CMakeLists.txt  README.md
hw-4/epoll_server/: CMakeLists.txt
hw-4/epoll_server/include/: Connection.hpp  Descriptor.hpp  Exception.hpp  FileDescriptor.hpp  Server.hpp
hw-4/epoll_server/src/: Connection.cpp  Descriptor.cpp  Exception.cpp  FileDescriptor.cpp  Server.cpp
hw-4/examples/: CMakeLists.txt  client.cpp  echo_server.cpp
hw-5/: CMakeLists.txt  README.md
hw-5/examples/: CMakeLists.txt  main.cpp
hw-5/shmem/: CMakeLists.txt
hw-5/shmem/include/: Allocator.hpp  Exception.hpp  Map.hpp  Semaphore.hpp  SharedMemory.hpp
hw-5/shmem/src/: Exception.cpp  Semaphore.cpp
lib/: Process.h
